--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Online Notes Sharing</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Welcome to Online Notes Sharing Website</h1>
+  <h1>Online Notes Sharing Website</h1>
   <p>College Project</p>
 </body>
 </html>
+
